--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="root" v-cloak>
-        <v-table :data='data' :columns='columns'></v-table>
+        <v-table :data='data' :theadData='theadData'></v-table>
     </div>
 
     <script src="../node_modules/vue/dist/vue.js"></script>
