--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="root" v-cloak>
-        <v-table  :discription='discription' :theadData='theadData'></v-table>
+        <v-table :messageData='messageData' :theadData='theadData'>
+
+        </v-table>
     </div>
 
     <script src="../node_modules/vue/dist/vue.js"></script>
