实现双向绑定

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,15 @@
 
         </v-table>
     </div>
+    <div id='observer'>
+        123
+    </div>
 
-    <script src="../node_modules/vue/dist/vue.js"></script>
+    <!-- <script src="../node_modules/vue/dist/vue.js"></script>
     <script src="../src/main.js"></script>
-    <script src="../component/table.js"></script>
+    <script src="../component/table.js"></script> -->
+    <script src='../src/Observer.js'></script>
+    
 </body>
 
 </html>
