--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         </v-table>
     </div>
     <div id='observer'>
-        123
+        <span n-html='name'>123</span>
     </div>
 
     <!-- <script src="../node_modules/vue/dist/vue.js"></script>
