--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     </div>
     <div id='observer'>
         <span n-html='name'>123</span>
+        <span n-html='age'>123</span>
+        <span n-html='hobby'>123</span>
     </div>
 
     <!-- <script src="../node_modules/vue/dist/vue.js"></script>
