--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
 
-    <!-- <script src="../node_modules/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="../src/main.js"></script>
     <script src="../component/table.js"></script> -->
     <script src='../src/Observer.js'></script>
